extra title changes

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
   <header>
-    <h1>Force Carbonation Calculator Bro ;)</h1>
+    <h1>Force Carbonation Calculator Bro!</h1>
   </header>
   <!-- change for output -->
   <main>
